0.20.0 (unreleased)
-------------------
 - Fix parsing empty soap response (#223)
 - Better support for xsd:anyType, by re-using the xsd.AnyObject (#229)


0.19.0 (2016-10-18)
-------------------
 - **backwards-incompatible**: If the WSDL defines that the endpoint returns
   soap:header elements and/or multple soap:body messages then the return
   signature of the operation is changed. You can now explcitly access the 
   body and header elements.
 - Fix parsing HTTP bindings when there are no message elements (#185)
 - Fix deserializing RPC responses (#219
 - Add support for SOAP 1.2 Fault subcodes (#210, vashek)
 - Don't alter the _soapheaders elements during rendering, instead create a 
   deepcopy first. (#188)
 - Add the SOAPAction to the Content-Type header in SOAP 1.2 bindings (#211)
 - Fix issue when mixing elements and any elements in a choice type (#192)
 - Improving parsing of results for union types (#192)
 - Make ws-addressing work with lxml < 3.5 (#209)
 - Fix recursion error when xsi:type='anyType' is given. (#198)


0.18.1 (2016-09-23)
-------------------
 - PyPi release error


0.18.0 (2016-09-23)
-------------------
 - Fix parsing Any elements by using the namespace map of the response node 
   instead of the namespace map of the wsdl. (#184, #164)
 - Improve handling of nested choice elements (choice>sequence>choice)


0.17.0 (2016-09-12)
-------------------
 - Add support for xsd:notation (#183)
 - Add improvements to resolving phase so that all objects are resolved.
 - Improve implementation of xsd.attributeGroup and xsd.UniqueType
 - Create a deepcopy of the args and kwargs passed to objects so that the 
   original are unmodified.
 - Improve handling of wsdl:arrayType


0.16.0 (2016-09-06)
-------------------
 - Fix error when rendering choice elements with have sequences as children, 
   see #150
 - Re-use credentials passed to python -mzeep <wsdl> (#130)
 - Workaround invalid usage of qualified vs non-qualified element tags in the