@@ -1,5 +1,8 @@
 0.20.0 (unreleased)
 -------------------
+ - Major performance improvements / lower memory usage. Zeep now no longer
+   copies data and alters it in place but instead uses a set to keep track of 
+   modified data.
  - Fix parsing empty soap response (#223)
  - Better support for xsd:anyType, by re-using the xsd.AnyObject (#229)
 
